# blender-agent-bridge

./: .gitattributes  .gitignore  CHANGELOG.md  CONTRIBUTING.md  PRIVACY.md  README.md  SECURITY.md  SUPPORT.md  pyproject.toml
.github/: dependabot.yml
docs/: ADDING_A_TOOL.md  ARCHITECTURE.md  CONTEXT_AND_DOCS_ENGINE.md  DEVELOPMENT.md  EXTERNAL_BRIDGE_MCP.md  GOOD_FIRST_ISSUES.md  INSTALL_FROM_GITHUB.md  LAUNCH_CHECKLIST.md  LIVE_PREVIEW_LOOP.md  PROJECT_PLAN.md  PUBLIC_BETA_ANNOUNCEMENT.md  README.md  RELEASE.md  SAFETY_MODEL.md  SHOWCASE.md  TESTING_GUIDE.md
scripts/: build_extension_repository.py  check_pypi_name.py  installed_extension_live_smoke.py  live_bridge_smoke.py  live_workflow_sweep.py  update_tool_snapshot.py
tests/: smoke_advanced_helpers.py  smoke_agent_loop.py  smoke_agent_memory.py  smoke_agent_tools.py  smoke_animation_helpers.py  smoke_bridge_protocol_validation.py  smoke_bridge_server.py  smoke_build_extension_zip.py  smoke_chat_interface.py  smoke_client_profile_routing.py  smoke_context_budget.py  smoke_context_docs.py  smoke_context_planner.py  smoke_extension_repository.py  smoke_external_asset_imports.py  smoke_external_assets.py  smoke_external_assets_live.py  smoke_full_tool_inventory.py  smoke_helper_routing.py  smoke_live_helpers.py  smoke_mcp_server.py  smoke_presentation_helpers.py  smoke_project_files.py  smoke_published_release_identity.py  smoke_real_client_routing.py  smoke_refinement_helpers.py  smoke_release_artifact_identity.py  smoke_release_consistency.py  smoke_render_jobs.py  smoke_safe_editing_helpers.py  smoke_script_analysis_bypass.py  (+5 more)
(+123 files in other folders)
